--- a/pages/customer.html
+++ b/pages/customer.html
@@ -443,6 +443,55 @@
           <!-- 动态生成的等级卡片将插入此处 -->
         </div>
       </div>
+
+      <!-- 个人信息编辑弹窗 -->
+      <div id="profile-modal" class="fixed inset-0 bg-black/50 z-[60] hidden flex items-center justify-center">
+        <div class="bg-white rounded-xl shadow-2xl w-full max-w-md p-6 transform transition-all">
+          <div class="flex justify-between items-center mb-6 border-b border-brown-light/30 pb-3">
+            <h3 class="text-xl font-bold text-brown-dark">Edit Profile</h3>
+            <button class="close-profile text-gray-400 hover:text-brown"><i class="fa fa-times text-xl"></i></button>
+          </div>
+          <form id="profile-form" class="space-y-4">
+            <div>
+              <label class="block text-sm font-medium text-gray-700 mb-1">Username</label>
+              <input type="text" id="profile-username"
+                class="w-full border border-brown-light/50 rounded-lg px-4 py-2 focus:ring-2 focus:ring-brown outline-none">
+            </div>
+            <div>
+              <label class="block text-sm font-medium text-gray-700 mb-1">Email / Contact</label>
+              <input type="email" id="profile-email"
+                class="w-full border border-brown-light/50 rounded-lg px-4 py-2 focus:ring-2 focus:ring-brown outline-none">
+            </div>
+            <div>
+              <label class="block text-sm font-medium text-gray-700 mb-1">New Password</label>
+              <input type="password" id="profile-password" placeholder="Leave blank to keep current"
+                class="w-full border border-brown-light/50 rounded-lg px-4 py-2 focus:ring-2 focus:ring-brown outline-none">
+            </div>
+            <div class="pt-4 flex gap-3">
+              <button type="button"
+                class="close-profile flex-1 py-2 border border-brown text-brown rounded-lg hover:bg-brown-light/10 transition-colors">Cancel</button>
+              <button type="submit"
+                class="flex-1 py-2 bg-brown text-white rounded-lg hover:bg-brown-dark transition-colors shadow-md">Save
+                Changes</button>
+            </div>
+          </form>
+        </div>
+      </div>
+
+      <!-- 历史公告弹窗 -->
+      <div id="announcement-modal" class="fixed inset-0 bg-black/50 z-[60] hidden flex items-center justify-center">
+        <div class="bg-white rounded-xl shadow-2xl w-full max-w-2xl max-h-[80vh] flex flex-col p-6">
+          <div class="flex justify-between items-center mb-6 border-b border-brown-light/30 pb-3">
+            <h3 class="text-xl font-bold text-brown-dark"><i class="fa fa-bullhorn mr-2"></i>Historical Announcements
+            </h3>
+            <button id="close-announcement" class="text-gray-400 hover:text-brown"><i
+                class="fa fa-times text-xl"></i></button>
+          </div>
+          <div id="announcement-list" class="flex-1 overflow-y-auto space-y-4 pr-2">
+            <!-- 动态加载公告 -->
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer class="bg-brown-dark text-white py-8 px-6">
