--- a/pages/customer.html
+++ b/pages/customer.html
@@ -380,9 +380,6 @@
             class="order-status-btn bg-white text-brown border border-brown px-4 py-2 rounded-full text-sm hover:bg-brown-light/20 transition-colors"
             data-status="cancelled">Cancelled</button>
         </div>
-        <div id="orders-list" class="space-y-6">
-          <p class="text-gray-600 text-center py-10">No order records</p>
-        </div>
         <div id="orders-list" class="space-y-6 pb-20">
           <!-- 动态渲染订单卡片 -->
         </div>
@@ -524,7 +521,6 @@
   </div>
 
   <script src="../scripts/common.js"></script>
-  <script src="../scripts/customer-mock-data.js"></script>
   <script>initLayout('customer', 'home');</script>
   <div id="detail-overlay" class="fixed inset-0 bg-black/50 z-50 hidden transition-opacity duration-300 opacity-0">
   </div>
@@ -645,8 +641,14 @@
     </div>
   </div>
 
+  <!-- API相关脚本 -->
+  <script src="../scripts/customer-api.js"></script>
   <script src="../scripts/book-detail.js"></script>
+  <!-- 注释掉模拟数据，改用API -->
+  <!-- <script src="../scripts/customer-mock-data.js"></script> -->
   <script src="../scripts/customer.js"></script>
+  <!-- API集成脚本（覆盖customer.js中的函数） -->
+  <script src="../scripts/customer-api-integration.js"></script>
 </body>
 
 </html>
